store/src/styles/sections/our-plans.scss
/* ... */
// Aggregate View styles
.hern-plans__aggregate {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   max-width: 980px;
   gap: 100px;
   margin: 30px auto;

   &__left {
      // padding-right: 6.25em;
      flex: 1 1 0;
   }

   &__card {
      height: 100%;
   }

   &__divider {
      width: 4px;
      background-color: rgba(51, 51, 51, 0.4);
      height: 240px;
      align-self: center;
      position: relative;
      left: 19px;
   }

   &__right {
      // padding-left: 8.25em;
      flex: 1 1 0;
   }

   &__title-wrapper {
      display: flex;
      align-items: center;
      justify-content: center;
      margin-bottom: 36px;

      .hern-plans__aggregate__title {
         font-family: 'Inter';
         font-style: normal;
         font-weight: 500;
         font-size: 20px;
         line-height: 29px;
         color: #333333;

         @media (max-width: 768px) {
            font-size: 1rem;
         }
      }

      @media (max-width: 768px) {
         margin-bottom: 16px;
      }

      & > span {
         color: #ffffff;
         font-family: 'Inter';
         font-style: normal;
         font-weight: 400;
         font-size: 18px;
         line-height: 22px;
         background-color: rgba(51, 51, 51, 0.4);
         width: 35px;
         height: 35px;
         display: flex;
         align-items: center;
         justify-content: center;
         border-radius: 50%;
         margin-right: 8px;

         @media (max-width: 768px) {
            width: 28px;
            height: 29px;
            font-size: 10px;
         }
      }
   }

   &__selectedPlan-title {
      color: #333333;
      font-family: 'Lato';
      font-style: normal;
      font-weight: 500;
      font-size: 20px;
      margin-top: 50px;
      margin-bottom: 33px;

      display: flex;

      & > span {
         margin-right: 5px;
      }

      @media (max-width: 768px) {
         margin-top: 16px;
         font-size: 20px;
      }
   }

   &__cards-wrapper {
      display: grid;
      grid-template-columns: repeat(2, 1fr);
      grid-gap: 22px;
      align-items: center;
      padding-right: 20px;
      height: 390px;
      overflow-y: scroll;

      @media (max-width: 768px) {
         padding-right: 4px;
         height: 370px;
      }
   }

   &__cards-wrapper::-webkit-scrollbar {
      width: 0.313em;
   }
   &__cards-wrapper::-webkit-scrollbar-track {
      box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   }
   &__cards-wrapper::-webkit-scrollbar-thumb {
      background-color: rgba(51, 51, 51, 0.4);
      outline: 1px solid rgba(51, 51, 51, 0.4);
   }

   @media (max-width: 1024px) {
      margin: 18px 20px;
      gap: unset;

      &__left {
         margin: 0 auto 20px auto;
      }

      &__divider {
         width: 240px;
         height: 4px;
         justify-self: center;
         margin: 30px 0px;
      }

      &__right {
         padding: unset;
         width: 500px;
         margin: 0 auto;
      }
   }
}

.hern-plan__aggregate {
   position: relative;
   height: 100%;

   &__cover-image {
      border-radius: 6px;
      position: relative;
      height: 100%;
      object-fit: cover;
   }

   &__overlay {
      width: 100%;
      height: 100%;
      border-radius: 6px;
      position: absolute;
      top: 0;
      left: 0;
      background: linear-gradient(
         180deg,
         rgba(51, 51, 51, 0) 50%,
         rgba(51, 51, 51, 0.93) 85.16%
      );

      cursor: pointer;
   }

   &__plan__img {
      width: 100%;
      height: 100%;
      border-radius: 6px;
   }

   &__icon-title-wrapper {
      display: flex;
      align-items: center;
      font-family: 'Inter';
      font-style: normal;
      font-weight: 500;
      font-size: 16px;
      position: absolute;
      bottom: 8px;
      left: 10px;
   }

   &__icon {
      display: none;
   }

   &__title {
      color: #fff;
      line-height: 1.1;
   }

   &__servings {
      display: flex;
      align-items: center;
      justify-content: space-between;
      margin-bottom: 30px;
   }

   &__item-counts {
      display: flex;
      align-items: center;
      justify-content: space-between;
      margin-bottom: 30px;
   }

   &__pricing {
      margin-bottom: 30px;
   }

   &__pricing-total-price-serving-wrapper {
      color: rgba(51, 51, 51, 0.6);
      font-family: 'Lato';
      font-style: normal;
      font-weight: 500;
      font-size: 14px;
   }

   &__pricing-total-price-serving-wrapper {
      display: flex;
      justify-content: space-between;
      margin-bottom: 8px;
   }

   &__pricing__total-price {
      font-family: 'Lato';
      font-style: normal;
      font-weight: 500;
      font-size: 14px;
      color: rgba(51, 51, 51, 0.6);
   }

   &__select-plan__btn {
      width: 100%;
      display: flex;
      border-radius: 999999999px;
      padding: 16px 30px;
      background-color: var(--hern-accent);
      justify-content: center;
      align-items: center;
      font-weight: 500;
      font-family: 'Inter';
      font-size: 18px;
      color: #fff;
      &:hover {
         background-color: rgba(17, 130, 59, 0.2);
         color: rgba(51, 51, 51, 0.6);
      }
   }
}

